basic test page

--- a/public/test.html
+++ b/public/test.html
@@ -5,19 +5,18 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no">
     <script type="text/javascript" src="js/labels.js"></script>
     <script type="text/javascript" src="js/bresenhamcanvas.js"></script>
-    <script type="text/javascript" src="js/collect.js"></script>
+    <script type="text/javascript" src="js/test.js"></script>
     <link rel="stylesheet" type="text/css" href="styles/main.css">
   </head>
   <body>
-    <div id="title">I need your help!</div>
-    <div id="subtitle">Draw this emoji in the box below</div>
-    <div id="target"></div>
+    <div id="title">&#x1f608 &#x1F602 &#x1F603 &#x1F609 &#x1F60A &#x1F61E &#x1F620 &#x1F622 &#x1F426</div>
+    <div id="subtitle">Draw one of these and I'll make a guess!</div>
+    <div class="spacer"></div>
     <canvas id="input">Canvas not supported</canvas>
     <div id="controls">
       <div id="reset">Reset</div>
       <div id="send">Send</div>
     </div>
-    <div id="instructions">Enter - Send drawing<br>Esc - Reset canvas</div>
-    <div id="choice"></div>
+    <div id="guess"></div>
   </body>
 </html>
