--- a/public/test.html
+++ b/public/test.html
@@ -6,10 +6,11 @@
     <script type="text/javascript" src="js/labels.js"></script>
     <script type="text/javascript" src="js/bresenhamcanvas.js"></script>
     <script type="text/javascript" src="js/test.js"></script>
+    <script type="text/javascript" src="js/labels.js"></script>
     <link rel="stylesheet" type="text/css" href="styles/main.css">
   </head>
   <body>
-    <div id="title">&#x1f608 &#x1F602 &#x1F603 &#x1F609 &#x1F60A &#x1F61E &#x1F620 &#x1F622 &#x1F426</div>
+    <div id="title"></div>
     <div id="subtitle">Draw one of these and I'll make a guess!</div>
     <div class="spacer"></div>
     <canvas id="input">Canvas not supported</canvas>
